WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
277484
[TexMap] Incorrect damage information produced for animations with blur
https://bugs.webkit.org/show_bug.cgi?id=277484
Summary
[TexMap] Incorrect damage information produced for animations with blur
Pawel Lampe
Reported
2024-08-01 06:32:05 PDT
Created
attachment 472031
[details]
animation-blur-slow.html When running animation-blur-slow.html demo using GTK port with some log instrumentation, one can see the damage information is constantly empty after few frames: LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(0,0,2560,1357) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(0,0,2560,1357) LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) Moreover, when running animation-blur-fast.html demo the same way, one can observe the damage information that is too small (should be larger than 100x100): LayerTreeHost::didRenderFrame(): damage - isEmpty():1, isInvalid():0, rects#:0, bounds:(0,0,0,0) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(0,0,2560,1357) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(0,0,2560,1357) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100) LayerTreeHost::didRenderFrame(): damage - isEmpty():0, isInvalid():0, rects#:1, bounds:(1230,100,100,100)
Attachments
animation-blur-slow.html
(565 bytes, text/html)
2024-08-01 06:32 PDT
,
Pawel Lampe
no flags
Details
animation-blur-fast.html
(558 bytes, text/html)
2024-08-01 06:32 PDT
,
Pawel Lampe
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-08-01 06:32:40 PDT
Created
attachment 472033
[details]
animation-blur-fast.html
Radar WebKit Bug Importer
Comment 2
2024-08-08 06:33:29 PDT
<
rdar://problem/133457603
>
EWS
Comment 3
2025-01-20 10:50:54 PST
Committed
289158@main
(ab86837116be): <
https://commits.webkit.org/289158@main
> Reviewed commits have been landed. Closing PR #37707 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug