[TexMap][Nicosia] Incorrect damage information produced for animations with blur https://bugs.webkit.org/show_bug.cgi?id=277484

Reviewed by NOBODY (OOPS!).

WIP

* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.cpp:
(WebCore::TextureMapperLayer::collectDamageRecursive):
(WebCore::TextureMapperLayer::collectDamageSelfAndChildren):
(WebCore::TextureMapperLayer::collectDamageSelfChildrenReplicaFilterAndMask):
(WebCore::TextureMapperLayer::collectDamageSelfChildrenFilterAndMask):
* Source/WebCore/platform/graphics/texmap/TextureMapperLayer.h:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
(WebKit::CoordinatedGraphicsScene::paintToCurrentGLContext):